crates/tsuno-driver/tests/fixtures/verify_cli/fail/rejects_unsupported_initial_state.rs
//@ verify
fn rejects_unsupported_initial_state(x: (i32, bool, bool)) {
    //@ assert "true"
}

fn main() {}
